# proxy-cesar

./: .gitignore  BLOB_EXTRACTION_GUIDANCE.md  BUG_VERIFICATION_FLOW.md  CLAUDE.md  COMPLETE_IMPLEMENTATION_SUMMARY.md  DEBUGGING_GUIDE.md  IMAGE_DELEGATION_COMPLETE.md  IMAGE_DELEGATION_FIX_SUMMARY.md  IMPLEMENTATION_CHECKLIST.md  KEYVAULT_FIX.md  KEYVAULT_OPTIMIZATION.md  LICENSE  README-plata.md  README.md  SESSION.md  SPEC.md  VERIFY_IMAGE_DELEGATION.md  analisis.md  bug_conversation.md  diagramas.md  plan-proxy.md  python.md  sonar-project.properties  test_hard.sh
.playwright-mcp/: page-2026-05-25T04-18-27-870Z.yml  page-2026-05-25T04-18-57-552Z.yml  page-2026-05-25T04-19-55-044Z.yml  (+4 more)
proxy/: .env.example  .gitignore  Caddyfile.example  PROVIDER_NOTES.md  README.md  alembic.ini  keyclaw.service  openapi.json  opencode.example.jsonc  proxy-cesar-arq.service  proxy-cesar.service  proxy.db-journal  pseudo_models.yaml  pyproject.toml
proxy/scripts/: comprehensive_test.py
proxy/src/: auth.py  logging_config.py  main.py
proxy/src/adapters/: local_discovery.py
proxy/src/adapters/cache/: message_ordering.py  provider_cache.py  valkey_affinity.py
proxy/src/adapters/db/: engine.py  models.py
proxy/src/adapters/db/migrations/: env.py
proxy/src/adapters/db/migrations/versions/: 0001_initial_conversations_and_capabilities.py  0002_add_tool_columns.py  0003_add_sprint5_columns.py
proxy/src/adapters/litellm/: __init__.py  client.py
proxy/src/api/: chat.py  chat_stream_helpers.py  chat_stream_persistence.py  chat_streaming.py  conversation_operations.py  conversations.py  health.py  metrics.py  models.py
proxy/src/config/: constants.py  pseudo_models.py  settings.py
proxy/src/domain/: affinity.py  capabilities.py  errors.py  ports.py  pseudo_model.py  tools.py  types.py
proxy/src/middleware/: blob.py  keyvault.py  rate_limiter.py
proxy/src/schemas/: tools.py
proxy/src/service/: capability_detector.py  chat_fallback.py  chat_messages.py  chat_models.py  chat_persistence.py  chat_service.py  compatibility.py  context_alert.py  file_extractors.py  inline_commands.py  model_resolver.py  pipeline_trace.py  smart_fallback.py  threshold_guard.py  tool_detector.py  tool_filter.py  tools_canonical.py  tools_edge_cases.py  tools_normalizer.py
proxy/src/service/compactor/: __init__.py  continuous.py  explicit.py  pre_compactor.py  prompts.py
proxy/src/service/multimedia/: __init__.py  image_describer.py  image_processor.py
proxy/src/service/router_llm/: __init__.py  suggester.py
proxy/src/tasks/: arq_app.py
proxy/src/utils/: sanitize.py
proxy/tests/: conftest.py  run_all_models.py  run_sprints_1_to_3.py  run_sprints_4_5.py  test_affinity.py  test_audit_log.py  test_auth.py  test_caching.py  test_capability_detector.py  test_chat.py  test_chat_api.py  test_chat_models.py  test_chat_service.py  test_client_agnostic.py  test_compaction_prompts.py  test_compatibility.py  test_comprehensive_integration.py  test_config.py  test_context_alerts.py  test_continuous_compaction.py  test_conversations_api.py  test_coverage_sprint5.py  test_e2e.py  test_explicit_compaction.py  test_fallback.py  test_image_delegation_all_pseudomodels.py  test_image_delegation_fix.py  test_image_describe.py  test_incoming_content_validation.py  test_keyvault.py  test_main.py  test_message_ordering.py  test_metrics.py  test_models_endpoint.py  test_pipeline_trace.py  test_pre_compaction.py  test_provider_cache.py  test_rate_limiter.py  test_router_llm.py  test_sprint6_comprehensive.py  (+10 more)
scripts/: deploy.sh  (+2 more)
(+13 files in other folders)
