[project]
name = "proxy-cesar"
version = "0.1.0"
description = "Deterministic multi-model proxy for LLMs"
requires-python = ">=3.12,<3.15"
dependencies = [
    "fastapi>=0.115,<0.137",
    "uvicorn[standard]>=0.34,<0.49",
    "litellm>=1.83.7,<1.83.8",
    "pydantic>=2.11,<3.0",
    "pydantic-settings>=2.7,<2.15",
    "sqlmodel>=0.0.38,<0.1",
    "asyncpg>=0.30,<0.32",
    "alembic>=1.14,<1.19",
    "valkey>=5.0,<7.0",
    "httpx>=0.23,<0.29",
    "pyyaml>=6.0,<6.1",
    "python-dotenv>=1.0,<1.3",
    "aiosqlite>=0.20,<0.23",
    "tiktoken>=0.9,<0.14",
]

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[project.optional-dependencies]
dev = [
    "pytest>=8.3,<9.1",
    "pytest-asyncio>=0.24,<1.4",
    "pytest-mock>=3.14,<3.16",
    "pytest-cov>=5.0,<7.0",
    "httpx>=0.23,<0.29",
    "fakeredis[lua]>=2.26,<2.36",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: Integration tests that require API keys and real provider calls.",
]
addopts = [
    "--cov=src",
    "--cov-report=xml:coverage.xml",
    "--cov-report=term-missing",
]

[tool.coverage.run]
source = ["src"]
omit = [
    "src/adapters/db/migrations/*",
    "src/__init__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
